<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_permissions">

    <fragment
        android:id="@+id/navigation_permissions"
        android:name="com.asis.virtualcompanion.ui.permissions.PermissionsFragment"
        android:label="@string/title_permissions"
        tools:layout="@layout/fragment_permissions">
        <action
            android:id="@+id/action_permissions_to_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_permissions"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.asis.virtualcompanion.ui.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_home_to_voice"
            app:destination="@id/navigation_voice" />
        <action
            android:id="@+id/action_home_to_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.asis.virtualcompanion.ui.main.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.asis.virtualcompanion.ui.main.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_privacy_policy"
            app:destination="@id/privacy_policy_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_voice"
        android:name="com.asis.virtualcompanion.ui.main.VoiceFragment"
        android:label="@string/title_voice"
        tools:layout="@layout/fragment_voice" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.asis.virtualcompanion.ui.main.ChatFragment"
        android:label="@string/chat_title"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/privacy_policy_fragment"
        android:name="com.asis.virtualcompanion.ui.settings.PrivacyPolicyFragment"
        android:label="@string/privacy_policy_title"
        tools:layout="@layout/fragment_privacy_policy" />
</navigation>